<resources>
    <string name="app_name">Tanaman</string>
    <string name="halo">Indonesia sejak dulu dikenal sebagai penghasil rempah-rempah terbesar di dunia. Banyak berbagai jenis tanaman yang tumbuh subur di berbagai penjuru nusantara. Tanaman-tanaman tersebut memiliki banyak manfaat.</string>
    <string name="tanaman_name">Nama Tanaman</string>
    <string name="detail">\t \t \t \t Temulawak adalah salah satu tanaman rimpang dari suku Zingiberaceae atau suku temu-temuan. Temulawak ini tumbuh dengan berumpun dan juga memiliki batang semu yang termasuk kedalam umbi tunas yang tumbuh didalam tanah, dengan warna coklat kemerahan, kuning tua hingga hijau gelap, memiliki aroma yang tajam serta memiliki rasa yang pahit. \n
                            \t \t \t \t Bagian yang dimanfaatkan adalah rimpang temulawak untuk dibuat jamu. Rimpang ini mengandung minyak asiri, pati, protein, lemak, selulosa dan mineral dan dipercaya dapat meningkatkan kerja ginjal serta anti inflamasi. \n
                            \t \t \t \t Manfaat lain dari rimpang tanaman ini adalah sebagai obat jerawat, meningkatkan nafsu makan, anti kolesterol, anti inflamasi, anemia, anti oksidan, pencegah kanker, dan anti mikroba.</string>
    <string name="title_activity_detail_tanaman2">Detail Tanaman</string>
    <string name="title_detail">Detail</string>
    <string name="title_tanam">Cara tanam</string>
    <string name="title_olahan">Olahan</string>
    <string name="hama"> 1) Ulat jengkal (Chrysodeixis chalcites Esp.)\n2) Ulat tanah (Agrotis ypsilon Hufn.) \n3) Lalat rimpang (Mimegrala coerulenfrons Macquart). </string>
    <string name="penyakit">1) Jamur Fusarium \n2) Penyakit Layu </string>
    <string name="tanam">\t \t \ta. Rimpang induk merupakan rimpang cadang yang digunakan berumur 10-12 bulan.
                            \n\t \t \tb. Rimpang yang dibuat menjadi bibit dibelah menjadi 4 bagian dan dijemur 4-6 hari dengan waktu 3-4 jam/harinya.
                            \n\t \t \tc. Diamkan ditempat lebab selam 1-2 bulan hingga tumbuh tunas dan siap untuk ditanam</string>
    <string name="tanam1">\t \t Temulawak tumbuh di daerah dengan ketinggian berkisar antara 5 mdpl hingga 1000 mdpl, dengan suhu berkisar antar 19°C hingga 30°C. \n\t \tLahan yang dipersiapkan 30 hari sebelum penanaman dengan pupuk kandang. Buatlah dengan jarak tanam 30×40 cm dan kedalaman lubang 60 cm dan benih akan siap dimasukkan dalam lobang.</string>
    <string name="tanam2">\t \t Penanaman baik dilakukan pada awal musim hujan, masukkan 1 bibit temulawak dengan posisi mata tunas menghadap ke arah atas, lalu timbun dengan tanah</string>
    <string name="tanam3">\t \t \ta. Penyiraman dilakukan 1 kali sehari pada pagi atau sore hari
                            \n\t \t \tb. Pemupukan dilakukan setelah penanaman menggunakan pupuk SP36 dan KCL dosis yang telah ditentukan agak tanaman tetap ternutrisi.
                            \n\t \t \tc. Penyulaman dilakukan ketika tanaman ada yang mati
                            \n\t \t \td. Penyiangan dilakukan 2-4 bulan untuk menghindari pertumbuhan gulma disekitar tanaman
                            \n\t \t \te. Pengendalian hama dan penyakit menggunakan insteksida dan fungisida sesuai dengan dosis yang dibutuhkan tanaman</string>
    <string name="tanam4">\t \t Pemanenan dilakukan setelah berumur 9 – 10 bulan setelah penanaman. Ciri-ciri temulawak yang siap panen yaitu rimpangnya besar berwarna kuning kecoklatan dan daunnya menguning serta kering.</string>
    <string name="bahan">\t \t \ta. 1-2 sdt bubuk temulawak atau temulawak yang sudah dihancurkan
                            \n\t \t \tb. 800 ml air
                            \n\t \t \tc. Sejumput bubuk kayu manis</string>
    <string name="cara">\t \t \ta. Rebus air di panci sampai panas.
                             \n\t \t \tb. Masukkan dua sendok temulawak, aduk sebentar dan didihkan dengan api kecil.
                             \n\t \t \tc. Matikan api, tambahkan sejumput bubuk kayu manis, aduk kembali.
                             \n\t \t \td. Saring teh temulawak ke dalam tempat minum, biarkan di suhu ruangan hingga lima menit.
                             \n\t \t \te. Siap dihidangkan dengan sedikit madu sebagai pemanis.</string>
    <string name="bahan1">\t \t \ta. 1 sdm temulawak parut, bisa juga menggunakan bubuk temulawak
                            \n\t \t \tb. 1 sdm jahe parut, bisa juga menggunakan bubuk jahe
                            \n\t \t \tc. 1 buah lemon, peras sari buahnya
                            \n\t \t \td. Sejumput lada hitam yang telah dihancurkan
                            \n\t \t \te. 700 ml air
                            \n\t \t \tf. Madu sesuai selera</string>
    <string name="cara1">\t \t \ta. Masukkan seluruh bahan yang sudah disiapkan ke dalam panci.
                             \n\t \t \tb. Rebus dengan api sedang selama tiga menit sampai panas tapi tidak mendidih. Matikan api setelahnya.
                             \n\t \t \tc. Tuang ke dalam gelas menggunakan penyaring. Jika terlalu pekat, tambahkan air panas atau air hangat.
                             \n\t \t \td. Simpan sisa ampas yang ada di penyaring di dalam kulkas. Ampas bisa digunakan kembali dan tahan 2-3 hari.</string>
    <string name="bahan2">\t \t \ta. 250 ml susu rendah lemak atau sesuai selera
                            \n\t \t \tb. 1 sdt madu
                            \n\t \t \tc. ½ sdt temulawak parut atau bubuk temulawak
                            \n\t \t \td. ¼ sdt bubuk kapulaga
                            \n\t \t \te. ¼ bubuk jahe
                            \n\t \t \tf. Sejumput lada hitam
                            \n\t \t \tg. 1 cengkeh
                            \n\t \t \th. Ekstrak vanila, secukupnya</string>
    <string name="cara2">\t \t \ta. Hangatkan susu di atas api kecil.
                             \n\t \t \tb. Masukkan bahan-bahan lainnya yang telah dipersiapkan. Aduk perlahan sampai tercampur rata.
                             \n\t \t \tc. Rebus dengan api kecil selama 3-4 menit.
                             \n\t \t \td. Tuang ke dalam gelas menggunakan penyaring. Siap disajikan.</string>
    <string name="jahe">Jahe</string>
    <string name="zingiber_officinale">(Zingiber officinale)</string>
    <string name="detail_jahe">\t \t \t \t Jahe, adalah tanaman rimpang yang sangat populer sebagai rempah-rempah dan bahan obat. Rimpangnya berbentuk jemari yang menggembung di ruas-ruas tengah. \n
                                \t \t \t \t Rasa dominan pedas disebabkan senyawa keton bernama zingeron. Jahe termasuk suku Zingiberaceae. \n \t \t \t \t Ada beragam jenis jahe, salah satunya yang paling
                                terkenal adalah jahe merah. Mengonsumsi jahe baik yang banyak digunakan sebagai bumbu masak atau obat. Bisa memberikanmu manfaat kesehatan sebagai berikut
                                mengatasi mual dan muntah, menyehatkan sistem pencernaan, menyehatkan otak, menyembuhkan migrain, melindungi dari sinar UV, mencegah kanker usus, dan masih banyak lagi.</string>
    <string name="hama_jahe">1) Kepik (Hemiptera.) \n2) Ulat penggesek akar \n3) Kumbang (Coleoptera)</string>
    <string name="penyakit_jahe">1) Penyakit layu bakteri\n2) Penyakit busuk rimpang </string>
    <string name="nama_latin_kemangi">(Ocimum basilicum)</string>
    <string name="latin_mengkudu">(Morinda citrifolia L.)</string>
    <string name="detail_mengkudu">\t \t \t \tMengkudu merupakan buah-buahan berwarna hijau yang banyak ditemukan di Australia, India, dan Asia Tenggara, termasuk di Indonesia. Mengkudu mengandung berbagai macam zat, salah satunya adalah kalium, yaitu mineral yang mampu membantu mempertahankan daya tahan tubuh. Selain digunakan untuk mengobati beberapa kondisi di atas, mengkudu juga sering digunakan sebagai pelembap dan menyamarkan penuaan dengan cara dioleskan di kulit.</string>
    <string name="hama_mengkudu">1) Belalang (Aularches miliaris)\n2) Kutu Dompolan Putih (Pseudococcus citri\n\t\tRisso)\n3) Ulat keket (Acherontiia lachesis F.)</string>
    <string name="penyakit_mengkudu">1) Cendawan Jelaga</string>
    <string name="mengkudu_tanam1">\t \t \t•	Pemilihan biji mengkudu yang baik ditandai dengan berwarna putih kekuningan merata, kondisi biji sudah cukup tua, berwarna cokelat tua dan berdaya kecambah tinggi 10—90%.\n \t \t \t•	Bibit mengkudu bisa didapatkan melalui cara generatif, yaitu dengan menggunakan biji buah. Selain itu, bibit mengkudu juga bisa didapat dengan cara vegetatif, yaitu setek batang atau cabang.</string>
    <string name="mengkudu_tanam2">\t \t \t•	Tanaman mengkudu dapat tumbuh di lahan bekas perkebunan, ladang, sawah, dan hutan. Langkah yang perlu Anda lakukan, yakni melakukan pembersihan lahan dari sisa-sisa tanaman jika akan ditanam di bekas hutan dan perkebunan. Lahan harus diolah dengan hati-hati agar humus tidak rusak.\n \t \t \t•	Selanjutnya, Anda harus menaburkan kapur dolomite ke tanah dan dibiarkan selama 7—14 hari. Keuntungan dari pengapuran tersebut ialah tanah menjadi gembur, mengurangi zat-zat beracun, dan mengurangi hilangnya unsur hara.\n
                                    \t \t \t•	Lubang tanam dalam budidaya mengkudu dapat dibuat dengan masing-masing ukuran panjang, lebar, dan dalam 40 cm. Jarak yang dapat dibuat sebagai lubang tanam mengkudu adalah ukuran 3m × 4m atau 4m × 4m. Namun, jarak tanam budidaya mengkudu dapat diperlebar pada lahan yang miring dan tanah yang lebih subur.</string>
    <string name="mengkudu_tanam3">\t \t \t•	Mengkudu itu sendiri dapat ditanam, baik dengan cara tanam sela maupun tumpang sari. Meski begitu, Anda harus memerhatikan kondisi dan lahan yang cocok dan dengan iklim setempat dan tidak bersaing dengan tanaman pokok. Selain itu, Anda juga perlu memotong sebagian atau 1/3 daun untuk mengurangi proses kelayuan.\n
                                    \t \t \t•	Potong akar tunggang bibit sampai 20—25 cm. Selanjutnya, masukkan media tanam buah mengkudu sampai ½ bagian. Bibit dimasukkan pada lubang tanam yang sudah disediakan seminggu sebelumnya. Timbun dengan bagian media tanam budidaya mengkudu. Tekan media tanam mengkudu agar tidak mudah rebah. Siram sampai media tanam mengkudu basah.</string>
    <string name="mengkudu_tanam4">\t \t \t•	Perawatan tanaman mengkudu terdiri atas penyiraman, penyulaman, penyiangan, pemupukan, dan pemangkasan. Penyiraman pada tanaman mengkudu dilakukan dua kali dalam satu hari dengan tujuan agar tanah tidak mudah kering. Penyulaman adalah pergantian tanaman mati dengan tanaman yang baru. Penyiangan dilakukan dengan cara membersihkan gulma dan tanaman yang mengganggu tanaman mengkudu.\n
                                    \t \t \t•	Sementara, pemupukan mengkudu dilakukan sejak awal 3 bulan dan diulangi setiap 6 bulan. Pupuk yang digunakan pupuk kandang dan pupuk buatan per pohon 1: 1. Pemangkasan budidaya mengkudu dilakukan dengan cara pemotongan dengan bantuan alat pemotong daun atau batang bertujuan menghindari hama dan penyakit yang menyerang.</string>
    <string name="mengkudu_tanam5">\t \t \t•	Masa panen mengkudu tiba setelah buah mengkudu terlihat tua dan tercium bau khas herbal dari tanaman buah ini. Tapi waktu panen mengkudu tidak dapat dilakukan secara bersamaan. Hal ini karena biasanya hasil buah mengkudu tidak serentak dan masaknya pun otomatis akan bergantian.</string>
</resources>