<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00574B"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="298dp"
                android:layout_height="74dp"
                android:layout_marginTop="8dp"
                app:srcCompat="@drawable/top_bar" />

            <ImageButton
                android:id="@+id/imageButtonMengkudu"
                android:layout_width="54dp"
                android:layout_height="45dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                android:onClick="closemengkudu"
                android:layout_gravity="center"
                android:scaleType="centerInside"
                android:padding="5dp"
                app:srcCompat="@drawable/list" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="561dp"
            android:orientation="vertical">

            <ScrollView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/nama_2"
                        android:text="Cara Menanam"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp"
                        android:textSize="27sp"
                        android:layout_gravity="center_horizontal"
                        android:textStyle="bold"
                        android:textColor="@android:color/black"/>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:adjustViewBounds="true"
                            android:scaleType="fitXY"
                            android:src="@drawable/bibit_mengkudu"/>

                    </FrameLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="1. Pembibitan"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:textColor="@android:color/black"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:text="@string/mengkudu_tanam1"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:textColor="@android:color/black"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="2. Persiapan Lahan Tanam"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:textColor="@android:color/black"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:text="@string/mengkudu_tanam2"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:textColor="@android:color/black"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="3. Penanaman"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:textColor="@android:color/black"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:text="@string/mengkudu_tanam3"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:textColor="@android:color/black"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="4. Pemeliharaan"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:textColor="@android:color/black"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:text="@string/mengkudu_tanam4"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:textColor="@android:color/black"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="5. Pemanenan"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:textColor="@android:color/black"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:text="@string/mengkudu_tanam5"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:textColor="@android:color/black"
                        />


                </LinearLayout>

            </ScrollView>
        </LinearLayout>

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00574B">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/detailtanaman"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:onClick="tanam_mengkudu"
                    android:layout_weight="1"
                    android:background="#00FFFFFF"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/detailputih" />

                <ImageButton
                    android:id="@+id/caratanam"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:background="#00FFFFFF"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/tanamijo" />

                <ImageButton
                    android:id="@+id/olahankunyit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:background="#00FFFFFF"
                    android:scaleType="centerInside"
                    android:onClick="olahanmengkudu"
                    app:srcCompat="@drawable/olahputih" />
            </LinearLayout>
        </com.google.android.material.bottomnavigation.BottomNavigationView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>