<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00574B"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="298dp"
                android:layout_height="74dp"
                android:layout_marginTop="8dp"
                app:srcCompat="@drawable/top_bar" />

            <ImageButton
                android:id="@+id/imageButtonMengkudu"
                android:layout_width="54dp"
                android:layout_height="45dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                android:onClick="closemengkudu"
                android:layout_gravity="center"
                android:scaleType="centerInside"
                android:padding="5dp"
                app:srcCompat="@drawable/list" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="561dp"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/nama_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="5dp"
                        android:text="Mengkudu"
                        android:textColor="@android:color/black"
                        android:textSize="27sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/nama_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="10dp"
                        android:text="@string/latin_mengkudu"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="20sp"
                        android:textStyle="italic" />

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:adjustViewBounds="true"
                            android:scaleType="fitXY"
                            android:src="@drawable/mengkudu" />

                    </FrameLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginBottom="8dp"
                        android:onClick="caratanam"
                        android:text="@string/detail_mengkudu"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginBottom="8dp"
                        android:text="Hama dan Penyakit :"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginBottom="16dp">

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="16dp"
                                android:text="Hama"
                                android:textColor="@android:color/darker_gray"
                                android:textSize="14sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="16dp"
                                android:text="@string/hama_mengkudu"
                                android:textColor="@android:color/black"
                                android:textSize="14sp" />
                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="16dp"
                                android:text="Penyakit"
                                android:textColor="@android:color/darker_gray"
                                android:textSize="14sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="16dp"
                                android:text="@string/penyakit_mengkudu"
                                android:textColor="@android:color/black"
                                android:textSize="14sp" />
                        </TableRow>


                    </TableLayout>

                </LinearLayout>
            </ScrollView>
        </LinearLayout>

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00574B">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/detailtanaman"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:background="#00FFFFFF"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/detailijo" />

                <ImageButton
                    android:id="@+id/caratanam"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:onClick="caratanam_mengkudu"
                    android:background="#00FFFFFF"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/tanamputih" />

                <ImageButton
                    android:id="@+id/olahan"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:background="#00FFFFFF"
                    android:scaleType="centerInside"
                    android:onClick="olahanmengkudu"
                    app:srcCompat="@drawable/olahputih" />
            </LinearLayout>
        </com.google.android.material.bottomnavigation.BottomNavigationView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>